# oz-main-be-15-team5

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  auth_service.py  config.py  database.py  db.py  dependencies.py  diary_service.py  main.py  models.py  requirements.txt  schemas.py  scroper.py  security.py  settings.py  users.py
app/frontend/: auth.html  index.html  quote.html  quote.js
app/routers/: __init__.py  auth.py  diary.py  quote.py  reflection.py
app/services/: auth_service.py  diary_service.py  users.py
app/test/: conftest.py  test_auth.py
app/자기성찰질문/: models-1.py  schemas-1.py
app/자기성찰질문/routers/: reflection-1.py
